Update to 1.19 and make it compile